--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ assets
 protected/runtime/application.log
 protected/runtime/application.log
 protected/runtime/application.log
+protected/runtime/application.log
