--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ protected/runtime/application.log
 protected/runtime/application.log
 protected/runtime/application.log
 protected/runtime/application.log
+*.log
+*.sql
